--- a/.github/workflows/generate-gpa.yml
+++ b/.github/workflows/generate-gpa.yml
@@ -3,7 +3,7 @@ name: Generate GPA Badge
 on:
   push:
     paths:
-      - '/assets/grades.xlsx'
+      - 'assets/grades.xlsx'
   workflow_dispatch:
   schedule:
     - cron: '0 0 * * 1'  # 매주 월요일 실행
@@ -24,8 +24,8 @@ jobs:
     - name: Install dependencies
       run: pip install -r requirements.txt
 
-    - name: Copy grades file to root
-      run: cp assets/grades.xlsx grades.xlsx
+    # - name: Copy grades file to root
+    #   run: cp assets/grades.xlsx assets/grades.xlsx
 
     - name: Run GPA script
       run: python generate_gpa.py
