--- a/.github/workflows/generate-gpa.yml
+++ b/.github/workflows/generate-gpa.yml
@@ -31,11 +31,12 @@ jobs:
 
     - name: Push to arenran02/arenran02
       run: |
-        git clone https://x-access-token:${{ secrets.GH_PAT }}@github.com/arenran02/arenran02.git out
-        cp gpa_badge.svg out/
+        git clone https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ secrets.GH_USERNAME }}/${{ secrets.GH_USERNAME }}.git out
+        mkdir -p out/gpa-badge-generator
+        cp gpa_badge.svg out/gpa-badge-generator/
         cd out
-        git config user.name github-actions
-        git config user.email github-actions@github.com
-        git add gpa_badge.svg
+        git config user.name "${{ secrets.GH_USERNAME }}"
+        git config user.email "${{ secrets.GH_EMAIL }}"
+        git add gpa-badge-generator/gpa_badge.svg
         git commit -m "Update GPA badge" || echo "No changes"
         git push
